--- a/Dockerfiles/Web/Dockerfile
+++ b/Dockerfiles/Web/Dockerfile
@@ -1,10 +1,10 @@
 FROM node:18-alpine
 
-WORKDIR /app
-
-COPY package.json
+COPY package.json .
 
 RUN npm install --force
+
+COPY . .
 
 EXPOSE 3000
 
